--- a/ca.mcgill.emf.examples.hal.edit/plugin.properties
+++ b/ca.mcgill.emf.examples.hal.edit/plugin.properties
@@ -75,3 +75,4 @@ _UI_BooleanOperator_AND_literal = AND
 _UI_BooleanOperator_OR_literal = OR
 _UI_BooleanOperator_NOT_literal = NOT
 _UI_HomeAutomationSystem_smarthomes_feature = Smarthomes
+_UI_Operand_sensor_feature = Sensor
