update domain model for precondition and add validation checks for deviceName

--- a/ca.mcgill.emf.examples.hal.edit/plugin.properties
+++ b/ca.mcgill.emf.examples.hal.edit/plugin.properties
@@ -76,3 +76,9 @@ _UI_BooleanOperator_OR_literal = OR
 _UI_BooleanOperator_NOT_literal = NOT
 _UI_HomeAutomationSystem_smarthomes_feature = Smarthomes
 _UI_Operand_sensor_feature = Sensor
+_UI_Composite_type = Composite
+_UI_TerminalExpression_type = Terminal Expression
+_UI_Composite_precondition_feature = Precondition
+_UI_Composite_booleanOperator_feature = Boolean Operator
+_UI_TerminalExpression_String_feature = String
+_UI_TerminalExpression_sensor_feature = Sensor
